--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Document</title>
 </head>
 <body>
     <h1>Practice</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus necessitatibus facere non velit eveniet omnis, modi quas distinctio ipsam sed nulla maiores provident. Qui nulla optio tempore laudantium quae quaerat?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus necessitatibus facere non velit eveniet omnis, modi quas distinctio ipsam sed nulla maiores provident. Qui nulla optio tempore laudantium quae quaerat?
+    </p>
 </body>
 </html>
